View Issue Details

IDProjectCategoryView StatusLast Update
0033790Open CASCADEOCCT:Data Exchangepublic2024-08-10 13:53
Reporteroan Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status verifiedResolutionfixed 
Target Version7.8.1Fixed in Version7.9.0 
Summary0033790: Data Exchange - XCAFDoc_LayerTool creates temporary instances during initialization of layer attributes
DescriptionMethod XCAFDoc_LayerTool::SetLayer() creates dynamic temporary objects of XCAFDoc_GraphNode before real assignment of XCAFDoc_GraphNode attribute to the target label.
if (! LayerL.FindAttribute( XCAFDoc::LayerRefGUID(), FGNode) ) {
    FGNode = new XCAFDoc_GraphNode;
    FGNode = XCAFDoc_GraphNode::Set(LayerL);
  }
  if (! L.FindAttribute( XCAFDoc::LayerRefGUID(), ChGNode) ) {
    ChGNode = new XCAFDoc_GraphNode;
    ChGNode = XCAFDoc_GraphNode::Set(L);
  }
Steps To ReproduceNone
TagsNo tags attached.
Test case numbernone

Activities

git

2024-08-06 13:19

administrator   ~0116377

Branch CR33790 has been created by oan.

SHA-1: 36ede89be6b572ae0cc400db3e5b792e9f06953d


Detailed log of new commits:

Author: oan
Date: Tue Aug 6 11:19:21 2024 +0100

    0033790: Data Exchange - XCAFDoc_LayerTool creates temporary instances during initialization of layer attributes
    
    Removed initialization of temporary objects.

oan

2024-08-06 18:57

developer   ~0116391

Test reports:
http://jenkins-test-10.nnov.opencascade.com/view/CR33790-master-oan/view/COMPARE/

To integrate:
OCCT: CR33790
PROD: None

Issue History

Date Modified Username Field Change
2024-08-06 13:16 oan New Issue
2024-08-06 13:16 oan Assigned To => ika
2024-08-06 13:16 oan Description Updated
2024-08-06 13:16 oan Description Updated
2024-08-06 13:16 oan Assigned To ika => oan
2024-08-06 13:19 git Note Added: 0116377
2024-08-06 18:57 oan Assigned To oan => ika
2024-08-06 18:57 oan Status new => resolved
2024-08-06 18:57 oan Steps to Reproduce Updated
2024-08-06 18:57 oan Note Added: 0116391
2024-08-06 19:00 dpasukhi Assigned To ika => bugmaster
2024-08-06 19:00 dpasukhi Status resolved => reviewed
2024-08-06 19:00 dpasukhi Severity minor => trivial
2024-08-10 13:53 dpasukhi Status reviewed => verified
2024-08-10 13:53 dpasukhi Resolution open => fixed
2024-08-10 13:53 dpasukhi Fixed in Version => 7.9.0
2024-08-10 13:53 dpasukhi Test case number => none