0033790: Data Exchange - XCAFDoc_LayerTool creates temporary instances during initialization of layer attributes

Removed initialization of temporary objects.